--- a/client/main.html
+++ b/client/main.html
@@ -1,5 +1,6 @@
 <head>
   <title>FCC29 Book Trading Club App</title>
+  <link rel="icon" href="../public/favicon.png" sizes="32x32" type="image/png">
 </head>
 
 <body>
