--- a/client/main.html
+++ b/client/main.html
@@ -1,4 +1,5 @@
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>FCC29 Book Trading Club App</title>
   <link rel="icon" href="/favicon.png" sizes="32x32" type="image/png">
 </head>
